[gd_scene load_steps=11 format=3 uid="uid://gyggpun5wh6o"]

[ext_resource type="Script" uid="uid://bauedty1xatjn" path="res://src/main/playback.gd" id="1_cp4rk"]
[ext_resource type="PackedScene" uid="uid://cux7l0b6tenn6" path="res://src/main/joint_debugger.tscn" id="2_b30vt"]
[ext_resource type="PackedScene" uid="uid://bw0ng04vcgduu" path="res://src/hands/hand_tracking_model.tscn" id="2_yfj0g"]
[ext_resource type="Material" uid="uid://dsm58bhf7rek3" path="res://src/hands/hand_material.tres" id="3_h7itd"]
[ext_resource type="PackedScene" uid="uid://c7h60akhmrqj3" path="res://src/hands/left_hand_model.tscn" id="4_4chqt"]
[ext_resource type="PackedScene" uid="uid://cmjvm03ka5b0w" path="res://src/hands/right_hand_model.tscn" id="6_wrliq"]

[sub_resource type="SphereMesh" id="SphereMesh_cp4rk"]
radius = 0.2
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b30vt"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_hcalp"]
top_radius = 0.0
bottom_radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_axhu7"]
albedo_color = Color(0, 0, 1, 1)

[node name="Playback" type="Node3D"]
script = ExtResource("1_cp4rk")

[node name="LeftHand" type="XRNode3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.2, 1.1, 1.45519e-11)
tracker = &"/playback/left_hand"

[node name="LeftHandMesh" parent="LeftHand" instance=ExtResource("2_yfj0g")]
unique_name_in_owner = true
hand_tracker = "/playback/left_hand"
hand_material = ExtResource("3_h7itd")
fallback_hand_model = ExtResource("4_4chqt")
fallback_bone_update = 0

[node name="LeftHandJointDebugger" parent="LeftHand" instance=ExtResource("2_b30vt")]
unique_name_in_owner = true

[node name="RightHand" type="XRNode3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.2, 1.1, 1.45519e-11)
tracker = &"/playback/right_hand"

[node name="RightHandMesh" parent="RightHand" instance=ExtResource("2_yfj0g")]
unique_name_in_owner = true
hand_type = 1
hand_tracker = "/playback/right_hand"
hand_material = ExtResource("3_h7itd")
fallback_hand_model = ExtResource("6_wrliq")
fallback_bone_update = 0

[node name="RightHandJointDebugger" parent="RightHand" instance=ExtResource("2_b30vt")]
unique_name_in_owner = true

[node name="HMD" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.45519e-11, 1.5, 1.45519e-11)
mesh = SubResource("SphereMesh_cp4rk")
surface_material_override/0 = SubResource("StandardMaterial3D_b30vt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HMD"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.241968)
mesh = SubResource("CylinderMesh_hcalp")
surface_material_override/0 = SubResource("StandardMaterial3D_axhu7")
